--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 spring.datasource.url=jdbc:derby://localhost:1527//db
 #spring.datasource.username=root
 #spring.datasource.password=password
