--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,19 @@
 			<version>10.8.3.0</version>
 			<scope>runtime</scope>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
     <groupId>org.apache.derby</groupId>
     <artifactId>derbyclient</artifactId>
     <version>10.13.1.1</version>
+</dependency> 
+ <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>-->
+	<dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+  <!-- <version>9.4-1206-jdbc42</version> -->
 </dependency>
 		<!-- <dependency>
 			<groupId>mysql</groupId>
