--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 
 #==== connect to mysql ======#
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none 
 spring.datasource.initialize=true
-spring.datasource.url=jdbc:derby://localhost:1527//db
+#spring.datasource.url=jdbc:derby://localhost:1527//db
+spring.datasource.url= jdbc:postgresql://localhost:5432/db 
+#spring.datasource.username=postgres spring.datasource.password=postgres@123
 #spring.datasource.username=root
 #spring.datasource.password=password
 spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
