--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@
 spring.jpa.hibernate.ddl-auto=none 
 spring.datasource.initialize=true
 #spring.datasource.url=jdbc:derby://localhost:1527//db
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://localhost:5432/db 
 #spring.datasource.username=postgres spring.datasource.password=postgres@123
 #spring.datasource.username=root
 #spring.datasource.password=password
-spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
+#spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
 #debug=true
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
